--- a/index.html
+++ b/index.html
@@ -19,45 +19,72 @@
 
 <body>
   <svg width="100%" height="100%" viewbox="-500 -500 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <path d="M-100 0Q0 0 -70.7 -70.7T0 -100T70.7 -70.7T100 0T70.7 70.7T0 100T-70.7 70.7T-100 0" fill="none" stroke="#000" stroke-width="1"
-    />
     <circle cx="0" cy="0" r="3" style="fill:#000" />
-    <!-- <circle cx="0" cy="0" r="3" style="fill:#000" /> -->
   </svg>
   <script>
 
-    var svg = document.getElementsByTagName('svg')[0];
-    var path = document.getElementsByTagNameNS('http://www.w3.org/2000/svg', 'path')[0];
-    var cir = document.getElementsByTagNameNS('http://www.w3.org/2000/svg', 'circle')[0];
-
-    function pd(time) {
-      var size = 200;
-      var t = time / 50;
-      var d = 'M' + cos((90) * d2r) * size * sin(t) + ' ' + sin((90) * d2r) * size * cos(t);
-      var len = 180;
-      var deg = 360 / len;
-      for (var i = 0; i < len; i++) {
-        var d0 = (i * deg + 90) * d2r;
-        var d1 = ((i + 1) * deg + 90) * d2r;
-        var o = ox(d0, d1);
-        o.x *= cos(t);
-        o.y *= sin(t);
-        var sc = size;
-        d += 'Q' + o.x * sc + ' ' + o.y * sc + ' ' + cos(d1) * size * sin(t) + ' ' + sin(d1) * size * cos(t);
-      }
-      path.setAttribute('d', d);
-      cir.setAttribute('r', sin(sin(t) * cos(t)) * cos(cos(t) * sin(t)) * size / 5 + size / 10);
-    }
-
     var sin = Math.sin;
     var cos = Math.cos;
+    var tan = Math.tan;
     var pi = Math.PI;
     var p2 = pi * 2;
+    var p_2 = pi / 2;
     var d2r = pi / 180;
     var r2d = 180 / pi;
     var abs = Math.abs;
     var pow = Math.pow;
     var log = Math.log;
+    var max = Math.max;
+    var min = Math.min;
+    var E = Math.E;
+    var MAX = Number.MAX_SAFE_INTEGER;
+    var MIN = Number.MIN_SAFE_INTEGER;
+    var clog = console.log;
+    var random = (() => {
+      var r = (max = 1, min = 0) => Math.random() * (max - min) + min;
+      r.valueOf = () => Math.random();
+      return r;
+    })();
+
+    var svg = document.getElementsByTagName('svg')[0];
+    var path = document.getElementsByTagNameNS('http://www.w3.org/2000/svg', 'path')[0];
+    var cir = document.getElementsByTagNameNS('http://www.w3.org/2000/svg', 'circle')[0];
+    var createSvg = (n) => document.createElementNS('http://www.w3.org/2000/svg', n);
+
+    var ps = [];
+    var ts = [];
+    var size = 100;
+    var asize = innerHeight / size;
+    var hscale = 2;
+    var rs = [random < .5, random < .5, random < .5];
+    function pd(t, l) {
+      var iz = z * 2 - 1;
+      if (iz < .000001 && iz > -.000001) iz = .000001;
+      var iw = -pi * iz, aw = -iw;
+      var ih = 1 / E, ah = E;
+      var step = 12;
+      var d = '';
+      d += 'M';
+      for (var i = -step * 2; i <= step * 3; i++) {
+        var phs = i / step * pow(t, l);
+        var r1 = rs[0] ? 1 : sin(t * l);
+        var r2 = rs[1] ? 1 : cos(t * t - l) * 2 + 3;
+        var r3 = rs[2] ? 1 : (sin(t / 12 * (l * l * 6 + 2) + pi * phs * 12 * (l * .5 + .5)) + 1) / 16;
+        var len = E / 10 * (1 - l * l) * r1 * r2 * r3;
+        phs = (aw - iw) * phs + iw;
+        len = (ah - ih) * len + ih;
+        var lol = log(len);
+        var nx = sin(phs);
+        var ny = cos(phs);
+        nx = nx * lol + nx / iz;
+        ny = -ny * lol - (ny - 1) / iz - iz;
+        nx *= size * (1 + asize - z * asize);
+        ny *= size * (1 + asize - z * asize);
+        d += d[d.length - 1] == 'M' ? '' : 'L';
+        d += nx + ' ' + ny;
+      }
+      return d;
+    }
 
     function ox(a, b) {
       var x = (sin(b) - sin(a)) / (cos(a) * sin(b) - sin(a) * cos(b));
@@ -66,11 +93,47 @@
       return { x, y };
     }
 
+    var m = 1;
+    var z = 1;
+    var mx = 0;
+    var zx = 0;
     window.onpointermove = (e) => {
-      pd();
+      m = 1 - max(min((e.clientY - 200) / (innerHeight - 400), 1), 0);
+      mx = (e.clientX * 2) / innerWidth - 1;
     }
     window.ontouchmove = (e) => {
       window.onpointermove(e.touches[0]);
+    }
+
+    window.onpointerdown = (e) => {
+      rs = [random < .5, random < .5, random < .5];
+      var v = (rs[1] << 0) + (rs[1] << 1) + (rs[2] << 2);
+    }
+    window.ontouchstart = (e) => {
+      window.onmspointerdown(e.touches[0]);
+    }
+
+    function draw() {
+
+      for (var i = 0; i <= 6; i++) {
+        if (!ps[i]) {
+          ps[i] = createSvg('path');
+          svg.appendChild(ps[i]);
+        }
+        var tw = min(max(i / 6, 0), 1);
+        var l = tw;
+        var d = pd(time / 3, l);
+        var path = ps[i];
+        path.id = 'p-' + i;
+        path.setAttribute('d', d);
+        path.setAttribute('fill', 'none');
+        path.setAttribute('stroke', 'rgba(0,0,0,1)');
+      }
+
+      var iz = z * 2 - 1;
+      cir.setAttribute('cy', (1 / iz - iz) * size * (1 + asize - z * asize) + random(1, -1) * random * (pow(sin(time), cos(time) * 10) * 5) || 1);
+      cir.setAttribute('cx', random(1, -1) * random * pow(sin(time), cos(time) * 10) * 5);
+      cir.setAttribute('r', pow(cos(time), sin(time) * (1 + zx * 2)) * random + 3);
     }
 
     requestAnimationFrame((function () {
@@ -85,7 +148,10 @@
 
     var time = 1;
     function Tick(tick) {
-      pd(time++);
+      z = (m - z) * .1 + z;
+      zx = (mx - zx) * .1 + zx;
+      time++;
+      draw();
     }
 
   </script>
