--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
 
     function rk() {
       console[['log', 'warn', 'error'][random(3, parseInt)]](o0o0());
-      window.onmousemove({
-        clientX: random(innerWidth),
-        clientY: random(innerHeight / 4) + (m > .5 ? 0 : innerHeight / 2)
-      });
+//       window.onmousemove({
+//         clientX: random(innerWidth),
+//         clientY: random(innerHeight / 4) + (m > .5 ? 0 : innerHeight / 2)
+//       });
       rm[random(3, parseInt)] = 1 / (1 + pow(E, tan(random * pi - pi / 2)));
       var r24 = 24 * random;
       random(true, .3) && (steps = fillArr(12 * random + 1, () => r24 + random));
